--- a/W4D4/Helpers_Layouts_Partials/Gemfile
+++ b/W4D4/Helpers_Layouts_Partials/Gemfile
@@ -18,7 +18,13 @@ gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
+# Gemfile
+gem 'letter_opener', group: :development do
 
+# config/environments/development.rb
+config.action_mailer.delivery_method = :letter_opener
+
+end
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
